--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,9 @@
 
 
 body{
-    color: #333;
-    background-color: rgb(232, 0, 0);
+    color: rgb(191, 191, 191);
+    background-color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
 }
+
