--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,6 @@
-
-body{
-    color: rgb(191, 191, 191);
-    background-color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-    min-height: 100vh;
+header {
+    width: 80%;
+    background-color: #BBB;
+    min-height: 60px;
+    margin: 0 auto;
 }
