--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,11 @@
-@import url('../css/reset.css');
-@import url('../css/footer.css');
-@import url('../css/header.css');
-@import url('../css/main.css');
+@import url('./reset.css');
+@import url('./header.css');
+@import url('./main.css');
+@import url('./footer.css');
 
-
-body{
-    color: rgb(191, 191, 191);
-    background-color: rgb(0, 0, 0);
+body {
+    color: #333;
+    background-color: #FFF;
     font-family: Arial, Helvetica, sans-serif;
-    min-height: 100vh;
+    font-size: 16px;
 }
-
