--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,8 +4,36 @@ footer {
     background-color: #999;
     color: #FFF;
     margin: 0 auto;
+     display: flex;
+     flex-direction: column;
 }
 
-footer p {
+.footer {
+    display: flex;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    justify-content: space-around;/* text-align: center; */
+}
+
+.container_information {
+ display: flex;
+ flex-direction: column;  
+}
+.copy{
     text-align: center;
+    margin-bottom: 2%;
+}
+.container_information>p {
+    margin-bottom: 10px;
+    font-weight: 800;
+
+}
+
+.container_information>a {
+    color: black;
+    text-decoration: none;
+    margin-bottom: 2%;
+}
+a:hover{
+    color: rgb(5, 75, 26);
 }
